--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ net positive social benefit</q> ([[?ETHICAL-WEB]], [[?design-principles]]). One 
 Web serves people is by protecting them in the face of asymmetries of power and this includes
 establishing and enforcing rules to govern the power of data.
 
-The Web is a social and technical system materialised by [=information flows=]. Because this document
+The Web is a social and technical system made up of [=information flows=]. Because this document
 focuses on [=privacy=] as it applies to the Web, it also focuses on privacy around information flows.
 <dfn data-lt="governance">Data governance</dfn> is the system of [=rules=] that regulate [=information flows=]. When
 [=people=] are involved in these [=information flows=], [=data governance=] determines how
@@ -360,11 +360,11 @@ It is important to keep in mind that there are <em>always</em> privacy [=rules=]
 purportedly neutral situation in which no [=rules=] apply. We must therefore determine which [=rules=]
 best serve human values ([[?ETHICAL-WEB]], [[?Why-Privacy]]).
 
-<dfn data-lt='information'>Information flows</dfn> are relevant to privacy whenever people are
-involved. The information itself need not necessarily be [=personal data=]. Disruptive or
-interruptive information flowing to a person is in scope, as is [=de-identified=] [=data=] that can
-be used to manipulate people or that was extracted by observing people's behaviour on someone else's
-website.
+<dfn data-lt='information'>Information flows</dfn> as understood in this document are information
+exchanged or processed by [=actors=], whenever people are involved. The information itself need not
+necessarily be [=personal data=]. Disruptive or interruptive information flowing <em>to</em> a
+person is in scope, as is [=de-identified=] [=data=] that can be used to manipulate people or that
+was extracted by observing people's behaviour on someone else's website.
 
 [=Information flows=] need to be understood in a bidirectional manner: the flow of information
 <em>about</em> a person (the subject) just as well as the flow of information <em>towards</em> a
