--- a/index.html
+++ b/index.html
@@ -1086,7 +1086,7 @@ protected by the [=user agent=] as well as by [=parties=].
 One issue, however, is that signalling to [=parties=] that a [=person=] may be [=vulnerable=] is
 itself a sensitive piece of information that should not be shared. One way to approach this issue is
 to rely on a [=global opt-out=] mechanism such as [[?GPC]] that is used by [=people=] whether they
-are [=vulnerable=] or not to put a requirement on [=parties=] to minimise their [=data=]
+are [=vulnerable=] or not and puts a requirement on [=parties=] to minimise their [=data=]
 [=processing=].
 
 <div class="practice">
@@ -1099,10 +1099,6 @@ such as [[?GPC]].</span>
 
 
 ## Principles for Notifications and Interruptions
-
-<aside class="issue">
-  This section has not been written.
-</aside>
 
 <aside class="issue">Connect intrusiveness to [=autonomy=], and write some principles.</aside>
 
