limits to building your own private police/NSA

--- a/index.html
+++ b/index.html
@@ -1046,6 +1046,9 @@ that person and from people who might be trying to attack that person. Also disc
 whether systems intended to protect server-side parties from abuse can collect more data
 from users.
 
+Discuss what limits need to be placed on such practices to distinguish them from privatised
+law enforcement and intellligence agencies.
+
 </aside>
 
 
