Add some more examples from jbradleychen.

--- a/index.html
+++ b/index.html
@@ -1206,6 +1206,23 @@ categories:
      person trying to create multiple accounts is not having their own safety protected by
      the extra data collection. Instead, other people are being protected from them.
 
+     * A person might want to post false or fraudulent information, or malware, to a
+       content hosting service. While the service can take down this information as it's
+       discovered, if the poster has complete privacy after misbehaving, they can just
+       re-upload the malicious content and can escape prosecution for anything illegal.
+
+     * In a service aimed at children, pedophiles might want to pretend to be children in
+       order to take advantage of the other users. While an ethical platform will likely
+       have content filtering and reporting features, attackers have been known to
+       encourage children to switch to platforms that aren't intended for children in
+       order to avoid these controls.
+
+     * People trying to misinform others will often find it easier when their victims
+       can't find the authors' real affiliations. One aspect of this is
+       [astroturfing](https://en.wikipedia.org/wiki/Astroturfing), where powerful
+       interests pay people or create fake accounts in order to create the impression of
+       agreement from more-sympathetic sources.
+
    * A person might want to pretend to view or click an ad many times, either to convince
      an advertiser to pay the website the ad appeared on, or to cost a particular
      advertiser a lot of money. People browsing websites and people posting advertisements
