Mention short-term vs long-term tradeoffs.

--- a/index.html
+++ b/index.html
@@ -1178,9 +1178,10 @@ improved privacy.
 
 ## Principles for Safety, Abuse, and Fraud {#safety}
 
-There are some cases where privacy and safety are in tension. These cases are more rare
-than one might think at first glance, but they still exist. We can distinguish three
-categories:
+There are some cases where privacy and safety are in tension. Many of these cases are
+short-term, only existing until we develop a system that achieves both privacy and
+safety. Long-term cases are rare, but still occasionally come up. We can distinguish
+three categories:
 
 1. A person's privacy exists in a tradeoff with their own safety.
 
