Mention that we may need new technologies.

--- a/index.html
+++ b/index.html
@@ -1251,6 +1251,10 @@ three categories:
 <p><span class="practicelab" id="principle-safety-with-privacy">As much as possible,
 services should provide both safety and privacy.</span></p>
 
+This may require the development and adoption of new technologies. For example, wider
+adoption of [[?WebAuthn]] could reduce account hijacking enough that services no longer
+need to fingerprint devices to prevent it.
+
 </div>
 
 <div class="practice">
