--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           authors: ['Robin Berjon', 'Justin Heideman'],
           href: 'https://nytimes.github.io/std-cat/',
         },
-        'CI': {
+        'Contextual-Integrity': {
           title: 'Privacy As Contextual Integrity',
           authors: ['Helen Nissenbaum'],
           href: 'https://digitalcommons.law.uw.edu/wlr/vol79/iss1/10/',
@@ -389,7 +389,7 @@ need of protection. The focus of this document is on the impact that leveraging 
 differential can have against people, but the same techniques are also used to leverage the power of
 information against other entities, such as companies or governments.
 
-The [=rules=] that apply vary from [=context=] to [=context=] ([[?Understanding-Privacy]], [[?CI]]): people
+The [=rules=] that apply vary from [=context=] to [=context=] ([[?Understanding-Privacy]], [[?Contextual-Integrity]]): people
 have different expectations of [=privacy=] at work, at a café, or at home for instance. Understanding and
 evaluating a privacy situation is best done by clearly identifying:
 
