--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@ the victim.
 These asymmetries of information and of automation create commanding asymmetries of power. It is not
 so much that <q>code is law</q>  but rather that code is judge, jury, and executioner.
 
-The Web is for everyone ([[?For-Everyone]]). It is <q>a platform that helps people and provides a
-net positive social benefit</q> ([[?ETHICAL-WEB]], [[?design-principles]]). One of the ways in which the
+The Web is for everyone ([[?For-Everyone]]). It is "a platform that helps people and provides a
+net positive social benefit" ([[?ETHICAL-WEB]], [[?design-principles]]). One of the ways in which the
 Web serves people is by protecting them in the face of asymmetries of power and this includes
 establishing and enforcing rules to govern the power of data.
 
