--- a/index.html
+++ b/index.html
@@ -383,8 +383,8 @@ to) or <dfn data-lt="inappropriately">inappropriate</dfn> otherwise.
 
 Typically, <dfn>actors</dfn> are [=people=] but they can also be collective endeavours such as
 companies, associations, or political parties (eg. in the case of espionage), which are known as
-[=parties=]. It is important to keep in mind that not all people are equal in how they may resist
-the imposition of unfair [=rules=], some [=people=] are more [=vulnerable=] and therefore in greater
+[=parties=]. It is important to keep in mind that not all people are equal in how they can resist
+the imposition of unfair [=rules=]: some [=people=] are more [=vulnerable=] and therefore in greater
 need of protection. The focus of this document is on the impact that leveraging this power
 differential can have against people, but the same techniques are also used to leverage the power of
 information against other entities, such as companies or governments.
