--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ or must not produce or [=process=] flows of information from, to, or about other
 ([[?GKC-Privacy]], [[?IAD]]).
 
 <dfn>Privacy</dfn> is achieved in a given [=context=] that either involves [=personal data=] or
-involves information being presented to [=people=], and the [=rules=] of that [=context=] are
+involves information being presented to [=people=] when the [=rules=] of that [=context=] are
 followed appropriately. When the [=rules=] for that [=context=] are not followed, there is a
 <dfn>privacy violation</dfn>. Similarly, we say that a particular interaction is
 <dfn data-lt="appropriately">appropriate</dfn> when the [=rules=] are adhered
