--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ the imposition of unfair [=rules=]: some [=people=] are more [=vulnerable=] and 
 need of protection. The focus of this document is on the impact that this power differential can
 have against people, but it can also impact other entities, such as companies or governments.
 
-The [=rules=] that apply vary from [=context=] to [=context=] ([[?Understanding-Privacy]], [[?Contextual-Integrity]]): people
+[=Rules=] vary from [=context=] to [=context=] ([[?Understanding-Privacy]], [[?Contextual-Integrity]]): people
 have different expectations of [=privacy=] at work, at a café, or at home for instance. Understanding and
 evaluating a privacy situation is best done by clearly identifying:
 
@@ -397,8 +397,8 @@ evaluating a privacy situation is best done by clearly identifying:
 * The specific type of data in the [=information flow=].
 * The [=rules=] that are in use in this specific context.
 
-It is important to keep in mind that there are <em>always</em> privacy [=rules=]. There is no
-purportedly neutral situation in which no [=rules=] apply. We must therefore determine which [=rules=]
+It is important to keep in mind that there are <em>always</em> privacy [=rules=]. There is no blank
+slate or "neutral" situation in which no [=rules=] apply. We must therefore determine which [=rules=]
 best align with ethical Web values ([[?ETHICAL-WEB]], [[?Why-Privacy]]).
 
 <dfn data-lt='information'>Information flows</dfn> as understood in this document are information
