--- a/index.html
+++ b/index.html
@@ -385,9 +385,8 @@ Typically, <dfn>actors</dfn> are [=people=] but they can also be collective ende
 companies, associations, or political parties (eg. in the case of espionage), which are known as
 [=parties=]. It is important to keep in mind that not all people are equal in how they can resist
 the imposition of unfair [=rules=]: some [=people=] are more [=vulnerable=] and therefore in greater
-need of protection. The focus of this document is on the impact that leveraging this power
-differential can have against people, but the same techniques are also used to leverage the power of
-information against other entities, such as companies or governments.
+need of protection. The focus of this document is on the impact that this power differential can
+have against people, but it can also impact other entities, such as companies or governments.
 
 The [=rules=] that apply vary from [=context=] to [=context=] ([[?Understanding-Privacy]], [[?Contextual-Integrity]]): people
 have different expectations of [=privacy=] at work, at a café, or at home for instance. Understanding and
