--- a/index.html
+++ b/index.html
@@ -407,9 +407,9 @@ exchanged or processed by [=actors=]. The information itself need not necessaril
 person is in scope, as is [=de-identified=] [=data=] that can be used to manipulate people or that
 was extracted by observing people's behaviour on someone else's website.
 
-[=Information flows=] need to be understood in a bidirectional manner: the flow of information
-<em>about</em> a person (the subject) just as well as the flow of information <em>towards</em> a
-person (the recipient). Recipients can have their privacy violated in multiple ways such as
+[=Information flows=] need to be understood from more than one perspective: there is the flow of information
+<em>about</em> a person (the subject) being processed or transmitted to any other party, and there is 
+the flow of information <em>towards</em> a person (the recipient). Recipients can have their privacy violated in multiple ways such as
 unexpected shocking images, loud noises while one intends to sleep, manipulative information,
 interruptive messages when a person's focus is on something else, or harassment when they seek
 social interactions.
