--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ social interactions.
 A [=person=]'s <dfn data-lt="autonomous">autonomy</dfn> is their ability to make decisions of their own volition,
 without undue influence from other parties. People have limited intellectual resources and
 time with which to weigh decisions, and by necessity rely on shortcuts when making
-decisions. This makes their privacy preferences malleable and susceptible to
+decisions. This makes their preferences, including privacy preferences, malleable and susceptible to
 manipulation ([[?Privacy-Behavior]], [[?Digital-Market-Manipulation]]). A [=person=]'s [=autonomy=] is enhanced by a
 system or device when that system offers a shortcut that aligns more with what that [=person=] would
 have decided given arbitrary amounts of time and relatively unlimited intellectual ability;
