--- a/index.html
+++ b/index.html
@@ -427,8 +427,7 @@ and [=autonomy=] is decreased when a similar shortcut goes against decisions mad
 ideal conditions.
 
 Affordances and interactions that decrease [=autonomy=] are known as <dfn>dark patterns</dfn>.
-A [=dark pattern=] does not have to be intentional, the deceptive effect is sufficient to
-define them ([[?Dark-Patterns]], [[?Dark-Pattern-Dark]]).
+A [=dark pattern=] does not have to be intentional. ([[?Dark-Patterns]], [[?Dark-Pattern-Dark]])
 
 Because we are all subject to motivated reasoning, the design of defaults and affordances
 that may impact [=autonomy=] should be the subject of independent scrutiny.
