notes from comments

--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ person is in scope, as is [=de-identified=] [=data=] that can be used to manipul
 was extracted by observing people's behaviour on someone else's website.
 
 [=Information flows=] need to be understood from more than one perspective: there is the flow of information
-<em>about</em> a person (the subject) being processed or transmitted to any other party, and there is 
+<em>about</em> a person (the subject) being processed or transmitted to any other party, and there is
 the flow of information <em>towards</em> a person (the recipient). Recipients can have their privacy violated in multiple ways such as
 unexpected shocking images, loud noises while one intends to sleep, manipulative information,
 interruptive messages when a person's focus is on something else, or harassment when they seek
@@ -435,7 +435,7 @@ that may impact [=autonomy=] should be the subject of independent scrutiny.
 Given the large volume of potential [=data=]-related decisions in today's data economy,
 complete informational self-determination is impossible. This fact, however, should not be
 confused with the idea that privacy is dead. Careful design of our technological
-infrastructure can ensure that people's [=autonomy=] as pertaining to their own [=data=]
+infrastructure can ensure that people's [=autonomy=] with respect to pertaining to their own [=data=]
 is enhanced through [=appropriate=] defaults and choice architectures.
 
 ### Opt-in, Consent, Opt-out, Global Controls {#opt-in-out}
@@ -514,7 +514,7 @@ practices, as is often the case with dominant players in advertising or
 in content aggregation ([[?Consent-Lackeys]], [[?CAT]]).
 
 Reference to the [=FIPs=] survives to this day. They are often referenced as <em>transparency
-and choice</em>, which, in today's digital environment, is often a strong indication that
+and choice</em>, which, in today's digital environment, is often an indication that
 [=inappropriate=] [=processing=] is being described.
 
 
