--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@ decisions.
 The <dfn>user agent</dfn> acts as an intermediary between a [=person=] (its [=user=]) and the web.
 [=User agents=] implement, to the extent possible, the [=rules=] that collective governance
 establishes in favour of individuals. They seek to prevent the creation of asymmetries of
-information, and serve their [=user=] by providing them with automation, to rectity
+information, and serve their [=user=] by providing them with automation, to rectify
 [=automation asymmetries=]. Where possible, they protect their [=user=] from receiving
 [=inappropriate=] information.
 
