--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@ The <dfn>user agent</dfn> acts as an intermediary between a [=person=] (its [=us
 establishes in favour of individuals. They seek to prevent the creation of asymmetries of
 information, and serve their [=user=] by providing them with automation, to rectify
 [=automation asymmetries=]. Where possible, they protect their [=user=] from receiving
-[=inappropriate=] information.
+intrusive messages.
 
 The [=user agent=] is expected to align fully with the [=person=] using it and operate exclusively
 in that [=person=]'s interest. It is <em>not</em> the [=first party=]. The [=user agent=] serves the
