--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@ fully expect more specific [=contexts=] of the Web to add their own [=rules=] to
 
 To the extent possible, [=user agents=] are expected to enforce these [=rules=]. However, this is not
 always possible and additional enforcement mechanisms are needed. One particularly salient issue
-is that a [=context=] is not defined in terms of who own it (it is not a [=party=]). Sharing
+is that a [=context=] is not defined in terms of who owns it (it is not a [=party=]). Sharing
 [=data=] between different services of a single company is just as much a [=privacy violation=] as
 if the same data were shared between unrelated [=parties=].
 
