--- a/index.html
+++ b/index.html
@@ -367,32 +367,32 @@ The Web is a social and technical system made up of [=information flows=]. Becau
 is specifically about [=privacy=] as it applies to the Web, it also focuses on privacy around
 information flows.
 
-<dfn data-lt="governance">Data governance</dfn> is the system of [=rules=] that regulate [=information flows=]. When
+<dfn data-lt="governance">Data governance</dfn> is the system of [=principles=] that regulate [=information flows=]. When
 [=people=] are involved in these [=information flows=], [=data governance=] determines how
-these rules constrain and distribute the power of information between different [=actors=].
-The <dfn>rules</dfn> describe the way in which different [=actors=] may, must,
+these [=principles=] constrain and distribute the power of information between different [=actors=].
+The <dfn>principles</dfn> describe the way in which different [=actors=] may, must,
 or must not produce or [=process=] flows of information from, to, or about other [=actors=]
 ([[?GKC-Privacy]], [[?IAD]]).
 
 Typically, <dfn>actors</dfn> are [=people=] but they can also be collective endeavours such as
 companies, associations, or political parties (eg. in the case of espionage), which are known as
 [=parties=]. It is important to keep in mind that not all people are equal in how they can resist
-the imposition of unfair [=rules=]: some [=people=] are more [=vulnerable=] and therefore in greater
+the imposition of unfair [=principles=]: some [=people=] are more [=vulnerable=] and therefore in greater
 need of protection. The focus of this document is on the impact that this power differential can
 have against people, but it can also impact other entities, such as companies or governments.
 
-[=Rules=] vary from [=context=] to [=context=] ([[?Understanding-Privacy]], [[?Contextual-Integrity]]): people
+[=Principles=] vary from [=context=] to [=context=] ([[?Understanding-Privacy]], [[?Contextual-Integrity]]): people
 have different expectations of [=privacy=] at work, at a café, or at home for instance. Understanding and
 evaluating a privacy situation is best done by clearly identifying:
 
 * Its [=actors=], which include the subject of the information as well as the sender and the recipient
   of the [=information flow=]. (Note that recipients might not always intend to be recipients.)
 * The specific type of data in the [=information flow=].
-* The [=rules=] that are in use in this specific context.
+* The [=principles=] that are in use in this specific context.
 
-It is important to keep in mind that there are <em>always</em> privacy [=rules=]. There is no blank
-slate or "neutral" situation in which no [=rules=] apply. We must therefore determine which [=rules=]
-best align with ethical Web values ([[?ETHICAL-WEB]], [[?Why-Privacy]]).
+It is important to keep in mind that there are <em>always</em> privacy [=principles=]. There is no blank
+slate or "neutral" situation in which no [=principles=] apply. We must therefore determine which [=principles=]
+best align with ethical Web values in Web [=contexts=] ([[?ETHICAL-WEB]], [[?Why-Privacy]]).
 
 <dfn data-lt='information'>Information flows</dfn> as understood in this document are information
 exchanged or processed by [=actors=]. The information itself need not necessarily be
@@ -514,7 +514,7 @@ and choice</em>, which, in today's digital environment, is often an indication t
 
 ## Collective Governance {#collective}
 
-Privacy [=rules=] are socially negotiated and often contested ([[?Privacy-Contested]]). This makes
+Privacy [=principles=] are socially negotiated and often contested ([[?Privacy-Contested]]). This makes
 privacy a problem of collective action ([[?GKC-Privacy]]).
 
 Population-level [=data processing=] may impact populations or individuals, including in
@@ -550,7 +550,7 @@ which, without collective oversight, cannot be legitimate.
 While transparency is rarely of any help in informing the individual choices that [=people=] may
 make or in increasing their [=autonomy=], it is instrumental to support the accountability work
 that can be performed by researchers and reporters as it plays a critical role in informing
-collective decision-making with respect to privacy [=rules=]. This consideration extends the
+collective decision-making with respect to privacy [=principles=]. This consideration extends the
 TAG's resolution on a [Strong and Secure Web Platform](https://www.w3.org/blog/2015/11/strong-web-platform-statement/)
 to ensure that <q>broad testing and audit continues to be possible</q> where
 [=information flows=] and automated decisions are involved.
@@ -562,7 +562,7 @@ decisions.
 ## People's Agents {#user-agents}
 
 The <dfn>user agent</dfn> acts as an intermediary between a [=person=] (its [=user=]) and the web.
-[=User agents=] implement, to the extent possible, the [=rules=] that collective governance
+[=User agents=] implement, to the extent possible, the [=principles=] that collective governance
 establishes in favour of individuals. They seek to prevent the creation of asymmetries of
 information, and serve their [=user=] by providing them with automation, to rectify
 [=automation asymmetries=]. Where possible, they protect their [=user=] from receiving
@@ -592,7 +592,7 @@ monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> i
   <dt><dfn class="export">Duty of Discretion</dfn></dt>
   <dd>
     Discretion requires the [=user agent=] to make best efforts to enforce
-    [=rules=] by placing limits on the flow and
+    [=principles=] by placing limits on the flow and
     [=processing=] of [=personal data=] that it can reasonably detect. Discretion is not
     confidentiality or secrecy: trust
     can be preserved even when the [=user agent=] shares some [=personal data=], so long as
@@ -629,7 +629,7 @@ These duties ensure the [=user agent=] will <em>care</em> for its [=user=]. In a
 research, this relationship with a [=trustworthy agent=] is often described as "fiduciary"
 [[?Fiduciary-UA]]. Some jurisdictions may have a distinct legal meaning for "fiduciary".
 
-Many of the [=rules=] described in the rest of this document extend the [=user agent=]'s duties and
+Many of the [=principles=] described in the rest of this document extend the [=user agent=]'s duties and
 make them more precise.
 
 
@@ -637,12 +637,12 @@ make them more precise.
 
 # Principles for Privacy on the Web
 
-As indicated above, different [=contexts=] require different [=rules=]. This section describes a set
-of [=rules=] designed to apply to the Web [=context=] in general. The Web is a big place, and we
-fully expect more specific [=contexts=] of the Web to add their own [=rules=] to further constrain
+As indicated above, different [=contexts=] require different [=principles=]. This section describes a set
+of [=principles=] designed to apply to the Web [=context=] in general. The Web is a big place, and we
+fully expect more specific [=contexts=] of the Web to add their own [=principles=] to further constrain
 [=information flows=].
 
-To the extent possible, [=user agents=] are expected to enforce these [=rules=]. However, this is not
+To the extent possible, [=user agents=] are expected to enforce these [=principles=]. However, this is not
 always possible and additional enforcement mechanisms are needed. One particularly salient issue
 is that a [=context=] is not defined in terms of who owns it (it is not a [=party=]). Sharing
 [=data=] between different [=contexts=] of a single company is just as much a [=privacy violation=] as
@@ -662,7 +662,7 @@ among several contexts.
 <dfn>Cross-context recognition</dfn> is the act of recognising that an [=identity=] in one
 [=context=] is the same [=person=] as an [=identity=] in another [=context=]. [=Cross-context
 recognition=] can at times be [=appropriate=] but anyone who does it needs to be careful not to
-apply the [=rules=] of one [=context=] in ways that violate the [=rules=] around use of information
+apply the [=principles=] of one [=context=] in ways that violate the [=principles=] around use of information
 acquired in a different [=context=]. (For example, if you meet your therapist at a cocktail party,
 you expect them to have rather different discussion topics with you than they usually would, and
 possibly even to pretend they do not know you.) This is particularly true for [=vulnerable=] people
@@ -721,7 +721,7 @@ recognition. For example if two or more services that a person needs to use insi
 a difficult-to-forge piece of their identity in order to use the services, it's the services
 behaving [=inappropriately=] rather than the [=user agent=].
 
-If a [=site=] includes multiple [=contexts=] whose [=rules=] indicate that it's [=inappropriate=] to
+If a [=site=] includes multiple [=contexts=] whose [=principles=] indicate that it's [=inappropriate=] to
 share data between the contexts, the fact that those distinct [=contexts=] fall inside a single
 [=machine-enforceable context=] doesn't make sharing data or [=cross-context
 recognition|recognizing=] [=identities=] any less [=inappropriate=].
@@ -1124,42 +1124,6 @@ resort to [=consent=], habituating [=people=] to ignore legal prompts and incent
 egregious [=purposes=], such that [=people=] will have to perform the [=privacy labour=] to
 [=opt out=] in every [=context=] in order to produce [=appropriate=] [=processing=].
 
-An approach that is more aligned with the expectation that the Web should provide a
-trustworthy, [=person=]-centric environment is to establish a regime consisting of
-three privacy tiers:
-
-<dl>
-  <dt>Default Privacy Tier</dt>
-  <dd>
-    This is the set of [=purposes=] that are deemed [=appropriate=] in a given [=context=]
-    and the [=processing=] that a [=person=] can expect without having triggered any
-    mechanisms to change their preferences. The exact details for this tier require clear
-    definition, including aspects such as data retention, but [=data=] would have to be
-    systematically siloed by [=context=] (<em>not</em> by [=party=], making it stricter than
-    the [=Vegas Rule=] and more in line with respecting [=privacy=]). This default tier
-    should also be defined differently for certain kinds of [=contexts=]. The legitimate
-    [=processing=] that can take place in this tier derives its legitimacy from matching the
-    expectations and interests of both the [=person=] and the [=first party=] they're interacting with
-    relationship, as guided by the applicable [=rules=]. If the [=first party=] has knowledge
-    of the person's [=identity=], it should make the [=identity=] it is using for the person,
-    along with its own branding as the [=data controller], obvious to the person.
-    [[?Twitter-Developer-Policy]] This tier is more [=appropriate=] the more the [=first party=]
-    acts in accordance with [=user agent duties=].
-  </dd>
-  <dt>Opt-out Privacy Tier</dt>
-  <dd>
-    [=People=] who, either from personal preference or because they are [=vulnerable=],
-    require greater obscurity in some or even most [=contexts=], would be able to transition
-    to this tier through an [=opt-out=] mechanism. This tier would only permit strictly
-    necessary [=purposes=]. This tier should be [=appropriate=] for [=vulnerable=]
-    [=people=].
-  </dd>
-  <dt>Opt-in Privacy Tier</dt>
-  <dd>
-  </dd>
-</dl>
-
-
 -->
 
 <section class="appendix">
@@ -1211,10 +1175,10 @@ the [=first party=].
 ## Acting on Data {#acting-on-data}
 
 <dfn>Privacy</dfn> is achieved in a given [=context=] that either involves [=personal data=] or
-involves information being presented to [=people=] when the [=rules=] of that [=context=] are
-followed appropriately. When the [=rules=] for that [=context=] are not followed, there is a
+involves information being presented to [=people=] when the [=principles=] of that [=context=] are
+followed appropriately. When the [=principles=] for that [=context=] are not followed, there is a
 <dfn>privacy violation</dfn>. Similarly, we say that a particular interaction is
-<dfn data-lt="appropriately">appropriate</dfn> when the [=rules=] are adhered
+<dfn data-lt="appropriately">appropriate</dfn> when the [=principles=] are adhered
 to) or <dfn data-lt="inappropriately">inappropriate</dfn> otherwise.
 
 A [=party=] <dfn data-lt="process|processing|processed|data processing">processes</dfn> data if it
