--- a/index.html
+++ b/index.html
@@ -390,8 +390,10 @@ evaluating a privacy situation is best done by clearly identifying:
 * The specific type of data in the [=information flow=].
 * The [=principles=] that are in use in this specific context.
 
-It is important to keep in mind that there are <em>always</em> privacy [=principles=]. There is no blank
-slate or "neutral" situation in which no [=principles=] apply. We must therefore determine which [=principles=]
+It is important to keep in mind that there are <em>always</em> privacy [=principles=] and that all
+of them imply different power dynamics. Some [=principles=] may be more permissive, but that does
+not render them neutral — it merely indicates that they are supportive of the power dynamic that
+they help to create. We must therefore determine which [=principles=]
 best align with ethical Web values in Web [=contexts=] ([[?ETHICAL-WEB]], [[?Why-Privacy]]).
 
 <dfn data-lt='information'>Information flows</dfn> as understood in this document are information
