--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@ What we consider is therefore not just the relation between the [=people=] who s
 and the [=parties=] that invite that disclosure ([[?Relational-Turn]]), but also between the [=people=]
 who may find themselves categorised indirectly even without sharing data. One key understanding here
 is that such relations may persist even when data is [=de-identified=]. What's more, such
-categorisation of people, voluntary or not, will change the way in which the world operates.
+categorisation of people, voluntary or not, changes the way in which the world operates.
 This can produce self-reinforcing loops that can have deleterious effects both individual and
 collective ([[?Seeing-Like-A-State]]).
 
