--- a/index.html
+++ b/index.html
@@ -532,8 +532,8 @@ and the [=parties=] that invite that disclosure ([[?Relational-Turn]]), but also
 who may find themselves categorised indirectly even without sharing data. One key understanding here
 is that such relations may persist even when data is [=de-identified=]. What's more, such
 categorisation of people, voluntary or not, changes the way in which the world operates.
-This can produce self-reinforcing loops that can have deleterious effects both individual and
-collective ([[?Seeing-Like-A-State]]).
+This can produce self-reinforcing loops that can damage both individuals and
+groups ([[?Seeing-Like-A-State]]).
 
 In general, collective issues in [=data=] require collective solutions. The goal of
 [=data governance=] in Web standards is the development of structural controls
