--- a/index.html
+++ b/index.html
@@ -535,9 +535,9 @@ categorisation of people, voluntary or not, changes the way in which the world o
 This can produce self-reinforcing loops that can damage both individuals and
 groups ([[?Seeing-Like-A-State]]).
 
-In general, collective issues in [=data=] require collective solutions. The goal of
-[=data governance=] in Web standards is the development of structural controls
-in [=user agents=] and the creation of institutions that can handle issues of [=privacy=].
+In general, collective issues in [=data=] require collective solutions. Web standards help with
+[=data governance=] by defining structural controls
+in [=user agents=] and delegating to institutions that can handle issues of [=privacy=].
 [=Governance=] will often struggle to achieve its goals if it works primarily by
 increasing <em>individual</em> control. A collective approach reduces the cost of control.
 
