--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@ groups ([[?Seeing-Like-A-State]]).
 
 In general, collective issues in [=data=] require collective solutions. Web standards help with
 [=data governance=] by defining structural controls
-in [=user agents=] and delegating to institutions that can handle issues of [=privacy=].
+in [=user agents=] and establishing or delegating to institutions that can handle issues of [=privacy=].
 [=Governance=] will often struggle to achieve its goals if it works primarily by
 increasing <em>individual</em> control. A collective approach reduces the cost of control.
 
