--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ In general, collective issues in [=data=] require collective solutions. Web stan
 [=data governance=] by defining structural controls
 in [=user agents=] and establishing or delegating to institutions that can handle issues of [=privacy=].
 [=Governance=] will often struggle to achieve its goals if it works primarily by
-increasing <em>individual</em> control. A collective approach reduces the cost of control.
+increasing <em>individual</em> control instead of acting collectively.
 
 Collecting data at large scales can have significant pro-social outcomes. Problems tend to
 emerge when entities take part in dual-use collection in which [=data=] is [=processed=]
