--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ which, without collective oversight, cannot be legitimate.
 
 ### Transparency and Research {#transparency}
 
-While transparency is rarely of any help in informing the individual choices that [=people=] may
+While transparency rarely helps enough to inform the individual choices that [=people=] may
 make or in increasing their [=autonomy=], it is instrumental to support the accountability work
 that can be performed by researchers and reporters as it plays a critical role in informing
 collective decision-making with respect to privacy [=principles=]. This consideration extends the
