clarify self-dealing

--- a/index.html
+++ b/index.html
@@ -542,17 +542,17 @@ in [=user agents=] and establishing or delegating to institutions that can handl
 increasing <em>individual</em> control instead of acting collectively.
 
 Collecting data at large scales can have significant pro-social outcomes. Problems tend to
-emerge when entities take part in dual-use collection in which [=data=] is [=processed=]
-for collective benefit but also for [=self-dealing=] [=purposes=].
-The [=self-dealing=] [=purposes=] will be justified as bankrolling the pro-social outcomes,
-which, without collective oversight, cannot be legitimate.
+emerge when entities [=process=] [=data=]
+for collective benefit and for [=self-dealing=] [=purposes=] at the same time.
+The [=self-dealing=] [=purposes=] are often justified as bankrolling the pro-social outcomes
+but this requires collective oversight to be [=appropriate=].
 
 ### Transparency and Research {#transparency}
 
 While transparency rarely helps enough to inform the individual choices that [=people=] may
-make or in increasing their [=autonomy=], it is instrumental to support the accountability work
-that can be performed by researchers and reporters as it plays a critical role in informing
-collective decision-making with respect to privacy [=principles=]. This consideration extends the
+make or in increasing their [=autonomy=], it plays a critical role in letting
+researchers and reporters inform our
+collective decision-making about to privacy [=principles=]. This consideration extends the
 TAG's resolution on a [Strong and Secure Web Platform](https://www.w3.org/blog/2015/11/strong-web-platform-statement/)
 to ensure that <q>broad testing and audit continues to be possible</q> where
 [=information flows=] and automated decisions are involved.
@@ -622,7 +622,8 @@ monitoring of their behaviour. Its <dfn class="export">user agent duties</dfn> i
     When a [=user agent=] carries out [=processing=] that is not in the [=person=]'s
     interest but instead benefits another entity (such as the user agent's implementer) that behaviour is
     known as <dfn>self-dealing</dfn>. Behaviour can be [=self-dealing=] even if it is done at the
-    same time as [=processing=] that is in the [=person=]'s interest. [=Self-dealing=] is always
+    same time as [=processing=] that is in the [=person=]'s interest, what matters is that it
+    potentially conflicts with that [=person=]'s interest. [=Self-dealing=] is always
     [=inappropriate=]. Loyalty is the avoidance of [=self-dealing=].
   </dd>
 </dl>
