--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
           href: 'https://foundation.mozilla.org/en/data-futures-lab/data-for-empowerment/data-futures-lab-glossary/',
           publisher: 'Mozilla Foundation',
         },
-        'Democratic-Data': {
-          title: 'Democratic Data: A Relational Theory For Data Governance',
+        'Relational-Governance': {
+          title: 'A Relational Theory of Data Governance',
           authors: ['Salomé Viljoen'],
-          href: 'https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3727562',
+          href: 'https://www.yalelawjournal.org/feature/a-relational-theory-of-data-governance',
           publisher: 'Yale Law Journal',
         },
         'Digital-Assistant-Trust': {
@@ -516,16 +516,15 @@ and choice</em>, which, in today's digital environment, is often an indication t
 
 ## Collective Governance {#collective}
 
-Privacy [=principles=] are socially negotiated and often contested ([[?Privacy-Contested]]). This makes
-privacy a problem of collective action ([[?GKC-Privacy]]).
-
+Privacy [=principles=] are socially negotiated and the definition of [=privacy=] is essentially
+contested ([[?Privacy-Contested]]). This makes privacy a problem of collective action ([[?GKC-Privacy]]).
 Population-level [=data processing=] may impact populations or individuals, including in
 ways that [=people=] could not control even under the optimistic assumptions of [=consent=].
 For example, based on population-level analysis, a company may know that <var>site.example</var>
 is predominantly visited by [=people=] of a given race or gender, and decide not to run its
 job ads there. Visitors to that page are implicitly having their [=data=] processed in
 [=inappropriate=] ways, with no way to discover the discrimination or seek relief
-([[?Democratic-Data]]).
+([[?Relational-Governance]]).
 
 What we consider is therefore not just the relation between the [=people=] who share data
 and the [=parties=] that invite that disclosure ([[?Relational-Turn]]), but also between the [=people=]
