--- a/index.html
+++ b/index.html
@@ -342,7 +342,21 @@ understanding is that the law is a floor, not a ceiling.
 
 </section>
 
-# Understanding Privacy Principles {#intro}
+# An Introduction to Privacy on the Web {#intro}
+
+The Web is for everyone ([[?For-Everyone]]). It is "a platform that helps people and provides a
+net positive social benefit" ([[?ETHICAL-WEB]], [[?design-principles]]). One of the ways in which the
+Web serves people is by protecting them in the face of asymmetries of power and this includes
+establishing and enforcing rules to govern the power of data.
+
+The Web is a social and technical system made up of [=information flows=]. Because this document
+is specifically about [=privacy=] as it applies to the Web, it focuses on privacy around
+information flows. Our goal is not to boil the privacy ocean, but rather to provide enough
+background to support the Web community in making informed decisions about privacy and to weave
+privacy into the architecture of the Web. Few architectural principles are absolute, and privacy is
+no exception: privacy can come into tension with other desirable properties of an ethical
+architecture, and when that happens the Web community will have to work together to strike the right
+balance.
 
 Information is power. It can be used to predict and to influence people, as well as to design online
 spaces that control people's behaviour. The collection and [=processing=] of information in greater
@@ -357,15 +371,6 @@ the victim.
 
 These asymmetries of information and of automation create commanding asymmetries of power. It is not
 so much that <q>code is law</q>  but rather that code is judge, jury, and executioner.
-
-The Web is for everyone ([[?For-Everyone]]). It is "a platform that helps people and provides a
-net positive social benefit" ([[?ETHICAL-WEB]], [[?design-principles]]). One of the ways in which the
-Web serves people is by protecting them in the face of asymmetries of power and this includes
-establishing and enforcing rules to govern the power of data.
-
-The Web is a social and technical system made up of [=information flows=]. Because this document
-is specifically about [=privacy=] as it applies to the Web, it also focuses on privacy around
-information flows.
 
 <dfn data-lt="governance">Data governance</dfn> is the system of [=principles=] that regulate [=information flows=]. When
 [=people=] are involved in these [=information flows=], [=data governance=] determines how
