--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@ their users present the [=identity=] those people want in each [=context=] they 
 themselves in.</span>
 
 Sometimes this means the UA should ensure that one site can't learn anything about their
-user's behavior on another site, while other times the UA should help their user prove to
+user's behavior on another site, while at other times the UA should help their user prove to
 one site that they have a particular identity on another site.
 
 </div>
