Explain that we're covering just one of the ethical web principles.

--- a/index.html
+++ b/index.html
@@ -330,7 +330,14 @@ document as anything other than a work in progress.
 It will continue to evolve and the task force will issue updates as often as needed. At the
 conclusion of the task force, the TAG intends to adopt this document as a Finding.
 
-<aside class="note">
+</section>
+
+# How This Document Fits In
+
+This document elaborates on the privacy principle in the [[[Ethical-Web]]]. It doesn't
+address how to balance the different principles in that document when they come into
+conflict and should not be taken as a statement that privacy is more or less important
+than the other principles.
 
 Privacy is covered by legal frameworks and this document recognises that existing data
 protection laws take precedence for legal matters. However, because the Web is global, we
@@ -338,10 +345,6 @@ benefit from having shared concepts to guide its evolution as a system built for
 ([[?RFC8890]]). A clear and well-defined view of privacy on the Web, informed by research,
 can hopefully help all the Web's participants in different legal regimes. Our shared
 understanding is that the law is a floor, not a ceiling.
-
-</aside>
-
-</section>
 
 # An Introduction to Privacy on the Web {#intro}
 
