Avoid numbering the new section.

--- a/index.html
+++ b/index.html
@@ -332,7 +332,9 @@ conclusion of the task force, the TAG intends to adopt this document as a Findin
 
 </section>
 
-# How This Document Fits In
+<section class="introductory">
+
+## How This Document Fits In
 
 This document elaborates on the privacy principle in the [[[Ethical-Web]]]. It doesn't
 address how to balance the different principles in that document when they come into
@@ -345,6 +347,8 @@ benefit from having shared concepts to guide its evolution as a system built for
 ([[?RFC8890]]). A clear and well-defined view of privacy on the Web, informed by research,
 can hopefully help all the Web's participants in different legal regimes. Our shared
 understanding is that the law is a floor, not a ceiling.
+
+</section>
 
 # An Introduction to Privacy on the Web {#intro}
 
